--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "PrintSwift",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icons/appicon/playstore.png",
+    "icon": "./assets/images/icon.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "splash": {
@@ -13,18 +13,21 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "icon": "./assets/images/icon.png",
+      "supportsTablet": true,
+      "bundleIdentifier": "com.tjselevani.PrintSwift"
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/icons/appicon/playstore.png",
+        "foregroundImage": "./assets/images/icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.tjselevani.PrintSwift"
     },
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "./assets/images/favicon.png"
+      "favicon": "./assets/images/icon.png"
     },
     "plugins": [
       "expo-router",
@@ -32,6 +35,14 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "840ac6dc-ec79-4aad-8f76-31e1e447ae2c"
+      }
     }
   }
 }
