--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,5 +15,6 @@
         "pthin",
         "tailwindcss",
         "tanstack"
-    ]
+    ],
+    "java.configuration.updateBuildConfiguration": "automatic"
 }
