--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "react-native": "0.74.5",
     "react-native-async-storage": "^0.0.1",
     "react-native-bluetooth-state-manager": "^1.3.5",
-    "react-native-gesture-handler": "~2.16.1",
+    "react-native-gesture-handler": "^2.21.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
