--- a/app.json
+++ b/app.json
@@ -1,19 +1,40 @@
 {
   "expo": {
-    "scheme": "printswift",
+    "scheme": "myapp",
     "name": "PrintSwift",
     "slug": "PrintSwift",
     "version": "1.0.0",
-    "platforms": ["ios", "android"],
+    "platforms": [
+      "ios",
+      "android"
+    ],
     "userInterfaceStyle": "automatic",
     "web": {
       "bundler": "metro",
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": ["expo-router", "expo-font"],
+    "plugins": [
+      "expo-router",
+      "expo-font"
+    ],
     "experiments": {
       "typedRoutes": true
+    },
+    "splash": {
+      "image": "./assets/images/splash_light.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#fafafa",
+      "dark": {
+        "image": "./assets/images/splash_dark.png",
+        "backgroundColor": "#161622"
+      }
+    },
+    "android": {
+      "package": "com.tjselevani.PrintSwift"
+    },
+    "ios": {
+      "bundleIdentifier": "com.tjselevani.PrintSwift"
     }
   }
 }
