--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "createAPK": "eas build -p android --profile preview"
   },
   "jest": {
     "preset": "jest-expo"
@@ -39,8 +40,10 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-async-storage": "^0.0.1",
+    "react-native-bluetooth-classic": "^1.73.0-rc.12",
     "react-native-bluetooth-state-manager": "^1.3.5",
-    "react-native-gesture-handler": "^2.21.2",
+    "react-native-collapsible": "^1.6.2",
+    "react-native-gesture-handler": "2.16.1",
     "react-native-get-random-values": "^1.11.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
@@ -57,6 +60,7 @@
     "@babel/preset-env": "^7.26.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
